[package]
name = "random_org"
version = "0.1.0"
authors = ["Marco Yuen <marcoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log = "0.4.13"
rand = "0.8.2"
reqwest = { version = "0.11.0", features = ["json", "cookies"] }
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
serde_test = "1.0.120"
thiserror = "1.0.23"
uuid = { version = "0.8.2", features = ["serde", "v5"] }

[dev-dependencies]
tokio = { version = "1.1.0", features = ["full"] }
